# OBSAN_ETL

./: .gitignore  Descripcion_fuentes.xlsx  README.md  ecosystem.config.js  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
apps/streamlit/: app.py
apps/streamlit/components/: info_panel.py  map_view.py  sidebar.py
apps/streamlit/config/: layers_config.py
apps/streamlit/core/: db.py  layer.py  layer_group.py
apps/streamlit/pages/: 2_📂_Carga_de_Archivos.py
apps/streamlit/upload/: pipeline_runner.py  storage.py  ui.py  validator.py  (+1 more)
config/: config.yaml  db.yaml  sources.yaml  state_db.yaml
config/transform/: agricola_transform.yaml  bajo_peso_nacer_transform.yaml  beneficiarios_iraca_transform.yaml  censo_pecuario_transform.yaml  departamentos_transform.yaml  desnutricion_aguda_5_transform.yaml  divipola_transform.yaml  edu_escolar_transform.yaml  edu_superior_transform.yaml  erradicacion_cultivos_transform.yaml  familias_accion_transform.yaml  irca_transform.yaml  mercado_laboral_transform.yaml  mercados_campesinos_transform.yaml  minerales_transform.yaml  mortalidad_desnutricion_transform.yaml  mun_pdet_transform.yaml  pme_jefe_hogar_transform.yaml  pme_por_genero_transform.yaml  poblacion_transform.yaml  produc_gas_transform.yaml  produc_petroleo_transform.yaml  red_vial_transform.yaml  regalias_transform.yaml  resguardo_indigena_transform.yaml  terraclimate_transform.yaml  victimas_transform.yaml
sql/views/: create_percapita_views.sql  v_low_birth_weight.sql
src/: runner.py  scheduler.py
state/: state.yaml  state_db.yaml
(+156 files in other folders)
