[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler==3.11.2",
    "fiona==1.10.1",
    "geopandas==1.1.0",
    "openpyxl==3.1.5",
    "pandas==2.3.0",
    "psycopg2-binary==2.9.12",
    "pyyaml==6.0.2",
    "rasterstats==0.20.0",
    "requests==2.32.4",
    "rioxarray==0.19.0",
    "shapely==2.1.1",
    "sqlalchemy==2.0.48",
    "topojson==1.10",
    "xarray==2025.7.1",
    "xlrd==2.0.2",
]
